# django_base

./: .coveragerc  .dockerignore  .env  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  TODOLIST.md  docker-compose.dev.yml  docker-compose.yml  manage.py  prometheus.yml  pyproject.toml  requirements.txt  resposta.md  setup-k8s.bat  setup-k8s.ps1  setup-k8s.sh  setup-prod.bat  setup-prod.ps1  setup-prod.sh  setup.bat  setup.ps1  setup.sh
.claude/: README.md  context.md  settings.local.json
.claude/agents/: backend-architect.md  code-reviewer.md  django-expert.md  python-pro.md
.claude/scripts/: context-monitor.py
.claude/skills/mcp-builder/: SKILL.md
.claude/skills/mcp-builder/reference/: mcp_best_practices.md  node_mcp_server.md  python_mcp_server.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
core/: tests.py
django_base/: settings.py  urls.py
docs/: JWT_AUTHENTICATION.md  SSL_HTTPS_SETUP.md
grafana/dashboards/: django-base-overview.json  django-metrics.json  nginx.json  redis-dashboard.json
k8s/: README.md
k8s/base/: configmap.yaml  django-deployment.yaml  grafana-deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  nginx-deployment.yaml  postgres-deployment.yaml  prometheus-deployment.yaml  pvc.yaml  redis-deployment.yaml  secrets.yaml
k8s/dev/: kustomization.yaml
k8s/prod/: kustomization.yaml
locale/: README.md
locale/en/LC_MESSAGES/: django.mo  django.po
locale/pt_BR/LC_MESSAGES/: django.mo  django.po
nginx/: Dockerfile  nginx.conf
scripts/: README.md  backup_database.sh  restore_database.sh
src/core/: admin.py  apps.py  context_processors.py  decorators.py  factories.py  forms.py  mixins.py  models.py  serializers.py  signals.py  sitemaps.py  tasks.py  tests.py  urls.py  validators.py  views.py  viewsets.py
src/core/management/: __init__.py
src/core/management/commands/: __init__.py  create_superuser_if_none_exists.py  seed_database.py  validate_env.py
src/core/migrations/: 0001_initial.py  0002_category_core_catego_is_acti_26a709_idx_and_more.py  0002_tag_product_created_by_category_product_category_and_more.py  0003_alter_product_options_and_more.py  0003_alter_userprofile_options_alter_category_created_at_and_more.py
src/core/templates/admin/: product_datatable.html
src/core/templates/core/product/: product_create.html  products.html
src/core/templatetags/: __init__.py  core_tags.py
src/core/tests/: test_integration_api.py  test_models.py
src/django_base/: asgi.py  settings.py  urls.py  wsgi.py
src/django_base/settings/: __init__.py  base.py  dev.py  env_validator.py  prod.py
static/: humans.txt  robots.txt
templates/admin/: product_datatable.html
templates/auth/: about.html  home.html  login.html  product_create.html  products.html  profile.html  project_info.html  register.html
templates/base/: base.html
templates/components/: card.html  pagination.html
templates/core/: home.html  project_info.html
templates/core/products/: create.html  edit.html  list.html
templates/health/: health_check.html
templates/registration/: login.html
